--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <div class="row container mt-2">
         <div class="col">
 
-            <h1>Computadora - <small>0</small></h1>
-            <div id="computadora-cartas">
+            <h1>Ordenador - <small>0</small></h1>
+            <div id="ordenador-cartas">
             </div>
         </div>
     </div>
